FindBugsでチェック
git-svn-id: https://www.seasar.org/svn/cubby/branches/2.0.x/cubby-project@1698 b6ec7606-942a-4144-8728-ba06ebfb7920